[gd_scene load_steps=2 format=3 uid="uid://mainmap_melnik_v3"]

[ext_resource type="Script" path="res://scripts/adventure/MainMap.gd" id="1_map"]
[ext_resource type="PackedScene" uid="uid://location_view_v1" path="res://scenes/ui/LocationView.tscn" id="2_loc_view"]

[node name="MainMap" type="Node2D"]
script = ExtResource("1_map")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11, 0.21, 0.34, 1)

[node name="MapTitle" type="Label" parent="UI"]
offset_left = 50.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "MĚLNÍK - MAPA"

[node name="Locations" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Btn_Pub" type="Button" parent="UI/Locations"]
layout_mode = 0
offset_left = 400.0
offset_top = 300.0
offset_right = 550.0
offset_bottom = 350.0
text = "Hospoda U Orla"

[node name="Btn_Cafe" type="Button" parent="UI/Locations"]
layout_mode = 0
offset_left = 700.0
offset_top = 200.0
offset_right = 850.0
offset_bottom = 250.0
text = "Café Vltava"

[node name="Btn_Hotel" type="Button" parent="UI/Locations"]
layout_mode = 0
offset_left = 200.0
offset_top = 500.0
offset_right = 350.0
offset_bottom = 550.0
text = "HOTEL (Základna)"

[node name="Btn_StartMission" type="Button" parent="UI/Locations"]
layout_mode = 0
offset_left = 400.0
offset_top = 400.0
offset_right = 600.0
offset_bottom = 450.0
text = "START MISE: TUTORIAL"

[node name="HUD_Panel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="UI/HUD_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" type="Label" parent="UI/HUD_Panel/VBox"]
layout_mode = 2
text = "Finance: 10,000 CZK"

[node name="ReputationLabel" type="Label" parent="UI/HUD_Panel/VBox"]
layout_mode = 2
text = "Reputace: Nikdo"

[node name="TeamLabel" type="Label" parent="UI/HUD_Panel/VBox"]
layout_mode = 2
text = "Tým: 1/4"

[node name="LocationView" parent="UI" instance=ExtResource("2_loc_view")]
visible = false

